deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: site-checker
  labels:
    app.kubernetes.io/name: site-checker
